# youtube-subs-md

./: .gitignore  PROGRESS.md  README.md  pyproject.toml
src/youtube_subs_md/: __init__.py  cli.py  filenames.py  markdown.py  text_cleaning.py  transcripts.py  videos.py
