[project]
name = "youtube-subs-md"
version = "0.1.0"
description = "Download recent YouTube channel videos' English subtitles and save as clean Markdown."
readme = "README.md"
authors = [
    { name = "habits", email = "1021869329@qq.com" }
]
requires-python = ">=3.10"
dependencies = [
    "yt-dlp>=2025.1.15",
    "youtube-transcript-api>=0.6.2",
    "typer>=0.12.0",
    "rich>=13.7.0",
]

[project.scripts]
youtube-subs-md = "youtube_subs_md.cli:app"

[build-system]
requires = ["uv_build>=0.9.0,<0.10.0"]
build-backend = "uv_build"
